--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,7 @@
 .home {
   .intro {
     .header-img {
+        padding-top:28%;
         width:100%;
         border-radius:5px;
     }
@@ -67,7 +68,7 @@
     justify-content: center;
     @media @phone {
       flex-direction: column-reverse;
-      padding:0px;
+      padding:25px 0 0;
     }   
 
 
