--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,12 +6,17 @@ border-bottom: 1px solid @nav-border;
 background-color: @nav-bg;
 flex-wrap: wrap;
 width:100%;
+position:fixed;
+opacity: .9;
 
     h1 {
         font-size: 5rem;
         width:100%;
         padding: 3% 0;
         text-align:center;
+        @media @phone {
+            font-size:4rem;
+        }
     }
 
     nav {
@@ -24,10 +29,10 @@ width:100%;
             font-family: @nav-font;
             color: black;
             font-size: 2rem;
-            padding: 2%;
+            margin: 0px 2% 2%;
             .hoverOver(@waterloo, @nav-bg);
             @media @phone {
-            font-size:1.4rem;
+            font-size:1.6rem;
              }
         }
     }
